# kex

./: .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  conf.py  flake.nix  justfile  nginx.conf  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  ca-bundle.yaml  configmap.yaml  deployment.yaml  ingressroute.yaml  middleware.yaml  sealedsecret.yaml  service.yaml  serviceaccount.yaml
docs/: annotations.rst  architecture.rst  contributing.rst  design-principles.rst  index.rst  operations.rst  retrospective-v1.rst
src/kex/: __init__.py  annotations.py  argocd.py  k8s.py  main.py  markdown.py
src/kex/routes/: apps.py  config.py
tests/integration/: test_config.py  test_routes.py
tests/unit/: test_annotations.py  test_main.py
ui/: index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
ui/src/: App.svelte  app.css  main.js
ui/src/lib/: api.js  store.svelte.js  theme.js
ui/src/lib/components/: AppCard.svelte  SearchBar.svelte  StatusBadge.svelte  ThemeToggle.svelte
ui/src/routes/: AppDetail.svelte  Index.svelte
ui/tests/: AppCard.test.js  api.test.js  config-route.test.js  index-grouping.test.js  theme.test.js
